--- a/howsolarworks.html
+++ b/howsolarworks.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
     <title>How Solar Works</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -30,89 +32,137 @@
     </nav>
     <main>
 
-        <article>
-            <h3>Solar Panels</h3>
-            <img src="/img/product1.jpg" alt="">
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer molestie, diam id pharetra rutrum, urna nunc porttitor massa, sit amet pellentesque metus tellus at mauris. Ut congue nibh quis justo euismod pharetra. In hac habitasse platea dictumst.
-                Nulla lorem libero, scelerisque eget tincidunt nec, pharetra a magna. Vestibulum id varius ex, eu scelerisque ex. Curabitur euismod, libero non convallis aliquam, elit urna pharetra turpis, eu pellentesque dui risus at sapien. Suspendisse
-                at scelerisque ex, pharetra mollis neque. Suspendisse et laoreet dui. Morbi est diam, posuere eget dictum vitae, malesuada id diam. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nam efficitur
-                nisl magna, et sollicitudin lectus vulputate at. Duis molestie ante sit amet nunc convallis feugiat. Aenean sodales magna ex, fringilla laoreet leo blandit nec. Maecenas dui nisl, luctus nec velit et, aliquet dictum felis. Mauris elementum
-                posuere sem, eget posuere velit elementum eu.
-            </p>
-        </article>
+        <section id="how-solar-works-articles">
+            <article id="solar-panel-article">
+                <h3>Solar Panels</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer molestie, diam id pharetra rutrum,
+                    urna
+                    nunc porttitor massa, sit amet pellentesque metus tellus at mauris. Ut congue nibh quis justo
+                    euismod
+                    pharetra. In hac habitasse platea dictumst.
+                    Nulla lorem libero, scelerisque eget tincidunt nec, pharetra a magna. Vestibulum id varius ex, eu
+                    scelerisque ex. Curabitur euismod, libero non convallis aliquam, elit urna pharetra turpis, eu
+                    pellentesque dui risus at sapien. Suspendisse
+                    at scelerisque ex, pharetra mollis neque.
+                </p>
+            </article>
 
-        <article>
-            <h3>Charge Controller</h3>
-            <img src="/img/product1.jpg" alt="">
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer molestie, diam id pharetra rutrum, urna nunc porttitor massa, sit amet pellentesque metus tellus at mauris. Ut congue nibh quis justo euismod pharetra. In hac habitasse platea dictumst.
-                Nulla lorem libero, scelerisque eget tincidunt nec, pharetra a magna. Vestibulum id varius ex, eu scelerisque ex. Curabitur euismod, libero non convallis aliquam, elit urna pharetra turpis, eu pellentesque dui risus at sapien. Suspendisse
-                at scelerisque ex, pharetra mollis neque. Suspendisse et laoreet dui. Morbi est diam, posuere eget dictum vitae, malesuada id diam. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nam efficitur
-                nisl magna, et sollicitudin lectus vulputate at. Duis molestie ante sit amet nunc convallis feugiat. Aenean sodales magna ex, fringilla laoreet leo blandit nec. Maecenas dui nisl, luctus nec velit et, aliquet dictum felis. Mauris elementum
-                posuere sem, eget posuere velit elementum eu.
-            </p>
-        </article>
+            <article id="charge-controller-article">
+                <h3>Charge Controller</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer molestie, diam id pharetra rutrum,
+                    urna
+                    nunc porttitor massa, sit amet pellentesque metus tellus at mauris. Ut congue nibh quis justo
+                    euismod
+                    pharetra. In hac habitasse platea dictumst.
+                    Nulla lorem libero, scelerisque eget tincidunt nec, pharetra a magna. Vestibulum id varius ex, eu
+                    scelerisque ex. Curabitur euismod, libero non convallis aliquam, elit urna pharetra turpis, eu
+                    pellentesque dui risus at sapien. Suspendisse
+                    at scelerisque ex, pharetra mollis neque.
+                </p>
+            </article>
 
-        <article>
-            <h3>Battery System</h3>
-            <img src="/img/product1.jpg" alt="">
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer molestie, diam id pharetra rutrum, urna nunc porttitor massa, sit amet pellentesque metus tellus at mauris. Ut congue nibh quis justo euismod pharetra. In hac habitasse platea dictumst.
-                Nulla lorem libero, scelerisque eget tincidunt nec, pharetra a magna. Vestibulum id varius ex, eu scelerisque ex. Curabitur euismod, libero non convallis aliquam, elit urna pharetra turpis, eu pellentesque dui risus at sapien. Suspendisse
-                at scelerisque ex, pharetra mollis neque. Suspendisse et laoreet dui. Morbi est diam, posuere eget dictum vitae, malesuada id diam. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nam efficitur
-                nisl magna, et sollicitudin lectus vulputate at. Duis molestie ante sit amet nunc convallis feugiat. Aenean sodales magna ex, fringilla laoreet leo blandit nec. Maecenas dui nisl, luctus nec velit et, aliquet dictum felis. Mauris elementum
-                posuere sem, eget posuere velit elementum eu.
-            </p>
-        </article>
+            <article id="battery-system-article">
+                <h3>Battery System</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer molestie, diam id pharetra rutrum,
+                    urna
+                    nunc porttitor massa, sit amet pellentesque metus tellus at mauris. Ut congue nibh quis justo
+                    euismod
+                    pharetra. In hac habitasse platea dictumst.
+                    Nulla lorem libero, scelerisque eget tincidunt nec, pharetra a magna. Vestibulum id varius ex, eu
+                    scelerisque ex. Curabitur euismod, libero non convallis aliquam, elit urna pharetra turpis, eu
+                    pellentesque dui risus at sapien. Suspendisse
+                    at scelerisque ex, pharetra mollis neque.
+                </p>
+            </article>
 
-        <article>
-            <h3>DC Power</h3>
-            <img src="/img/product1.jpg" alt="">
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer molestie, diam id pharetra rutrum, urna nunc porttitor massa, sit amet pellentesque metus tellus at mauris. Ut congue nibh quis justo euismod pharetra. In hac habitasse platea dictumst.
-                Nulla lorem libero, scelerisque eget tincidunt nec, pharetra a magna. Vestibulum id varius ex, eu scelerisque ex. Curabitur euismod, libero non convallis aliquam, elit urna pharetra turpis, eu pellentesque dui risus at sapien. Suspendisse
-                at scelerisque ex, pharetra mollis neque. Suspendisse et laoreet dui. Morbi est diam, posuere eget dictum vitae, malesuada id diam. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nam efficitur
-                nisl magna, et sollicitudin lectus vulputate at. Duis molestie ante sit amet nunc convallis feugiat. Aenean sodales magna ex, fringilla laoreet leo blandit nec. Maecenas dui nisl, luctus nec velit et, aliquet dictum felis. Mauris elementum
-                posuere sem, eget posuere velit elementum eu.
-            </p>
-        </article>
+            <article id="dc-power-article">
+                <h3>DC Power</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer molestie, diam id pharetra rutrum,
+                    urna
+                    nunc porttitor massa, sit amet pellentesque metus tellus at mauris. Ut congue nibh quis justo
+                    euismod
+                    pharetra. In hac habitasse platea dictumst.
+                    Nulla lorem libero, scelerisque eget tincidunt nec, pharetra a magna. Vestibulum id varius ex, eu
+                    scelerisque ex. Curabitur euismod, libero non convallis aliquam, elit urna pharetra turpis, eu
+                    pellentesque dui risus at sapien. Suspendisse
+                    at scelerisque ex, pharetra mollis neque.
+                </p>
+            </article>
 
-        <article>
-            <h3>Inverter</h3>
-            <img src="/img/product1.jpg" alt="">
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer molestie, diam id pharetra rutrum, urna nunc porttitor massa, sit amet pellentesque metus tellus at mauris. Ut congue nibh quis justo euismod pharetra. In hac habitasse platea dictumst.
-                Nulla lorem libero, scelerisque eget tincidunt nec, pharetra a magna. Vestibulum id varius ex, eu scelerisque ex. Curabitur euismod, libero non convallis aliquam, elit urna pharetra turpis, eu pellentesque dui risus at sapien. Suspendisse
-                at scelerisque ex, pharetra mollis neque. Suspendisse et laoreet dui. Morbi est diam, posuere eget dictum vitae, malesuada id diam. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nam efficitur
-                nisl magna, et sollicitudin lectus vulputate at. Duis molestie ante sit amet nunc convallis feugiat. Aenean sodales magna ex, fringilla laoreet leo blandit nec. Maecenas dui nisl, luctus nec velit et, aliquet dictum felis. Mauris elementum
-                posuere sem, eget posuere velit elementum eu.
-            </p>
-        </article>
+            <article id="inverter-article">
+                <h3>Inverter</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer molestie, diam id pharetra rutrum,
+                    urna
+                    nunc porttitor massa, sit amet pellentesque metus tellus at mauris. Ut congue nibh quis justo
+                    euismod
+                    pharetra. In hac habitasse platea dictumst.
+                    Nulla lorem libero, scelerisque eget tincidunt nec, pharetra a magna. Vestibulum id varius ex, eu
+                    scelerisque ex. Curabitur euismod, libero non convallis aliquam, elit urna pharetra turpis, eu
+                    pellentesque dui risus at sapien. Suspendisse
+                    at scelerisque ex, pharetra mollis neque.
+                </p>
+            </article>
 
-        <article>
-            <h3>AC Power</h3>
-            <img src="/img/product1.jpg" alt="">
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer molestie, diam id pharetra rutrum, urna nunc porttitor massa, sit amet pellentesque metus tellus at mauris. Ut congue nibh quis justo euismod pharetra. In hac habitasse platea dictumst.
-                Nulla lorem libero, scelerisque eget tincidunt nec, pharetra a magna. Vestibulum id varius ex, eu scelerisque ex. Curabitur euismod, libero non convallis aliquam, elit urna pharetra turpis, eu pellentesque dui risus at sapien. Suspendisse
-                at scelerisque ex, pharetra mollis neque. Suspendisse et laoreet dui. Morbi est diam, posuere eget dictum vitae, malesuada id diam. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nam efficitur
-                nisl magna, et sollicitudin lectus vulputate at. Duis molestie ante sit amet nunc convallis feugiat. Aenean sodales magna ex, fringilla laoreet leo blandit nec. Maecenas dui nisl, luctus nec velit et, aliquet dictum felis. Mauris elementum
-                posuere sem, eget posuere velit elementum eu.
-            </p>
-        </article>
+            <article id="ac-power-article">
+                <h3>AC Power</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer molestie, diam id pharetra rutrum,
+                    urna
+                    nunc porttitor massa, sit amet pellentesque metus tellus at mauris. Ut congue nibh quis justo
+                    euismod
+                    pharetra. In hac habitasse platea dictumst.
+                    Nulla lorem libero, scelerisque eget tincidunt nec, pharetra a magna. Vestibulum id varius ex, eu
+                    scelerisque ex. Curabitur euismod, libero non convallis aliquam, elit urna pharetra turpis, eu
+                    pellentesque dui risus at sapien. Suspendisse
+                    at scelerisque ex, pharetra mollis neque.
+                </p>
+            </article>
+        </section>
 
-        <aside>
-            <img src="/img/product1.jpg" alt="">
-            <a href="https://www.ikwilzonneenergie.nl/">advertisement</a>
-            <img src="/img/product1.jpg" alt="">
-            <img src="/img/product1.jpg" alt="">
+        <aside id="how-solar-works-ad">
+
+            <figure id="ad-1">
+                <a
+                    href="https://www.ikwilzonneenergie.nl/epages/61494231.sf/nl_NL/?ObjectPath=/Shops/61494231/Products/SCC110050210">
+                    <img src="img/SmartSolar-MPPT-10030.png" alt="Image of SmartSolar MPPT 10030">
+
+                </a>
+                <figcaption>SmartSolar MPPT 10030</figcaption>
+            </figure>
+
+            <figure id="ad-2">
+                <a
+                    href="https://www.ikwilzonneenergie.nl/epages/61494231.sf/nl_NL/?ObjectPath=/Shops/61494231/Products/%22SMA+Sunny+Boy+SB3.6%22">
+                    <img src="img/sunny-boy-30-36-40-50-60.jpg" alt="Image of SMA SB3.6 Solar panels inverter 1 phase">
+                </a>
+                <figcaption>SMA SB3.6 Solar panels inverter 1 phase</figcaption>
+            </figure>
+
+            <figure id="ad-3">
+                <a
+                    href="https://www.ikwilzonneenergie.nl/epages/61494231.sf/nl_NL/?ObjectPath=/Shops/61494231/Products/%22175Wp+12Volt++zonne-energie+set%22">
+                    <img src="img/Victron-175Wp-12Volt-Solar-panel-set.png" alt="Victron 175W 12Volt Solar panel set">
+                </a>
+                <figcaption>Victron 175W 12Volt Solar panel set</figcaption>
+            </figure>
+
         </aside>
     </main>
     <footer>
         <p>
             &copy; Stephen Holden 2020
         </p>
+        <section id="cookie-info">
+            <h2>Cookie Statement</h2>
+            <p>
+                This site uses Cookies to enhance your experience. By using this website you agree to our cookie policy
+            </p>
+        </section>
     </footer>
 </body>
 
