--- a/index.html
+++ b/index.html
@@ -19,134 +19,136 @@
         </h2>
     </header>
 
-
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="howsolarworks.html">How solar works</a></li>
-            <li><a href="eusolar.html">EU Solar</a></li>
-            <li><a href="contact.html">Contact</a></li>
+        
+            <li class="nav-item"><a href="index.html">Home</a></li>
+            <li class="nav-item"><a href="howsolarworks.html">How solar works</a></li>
+            <li class="nav-item"><a href="eusolar.html">EU Solar</a></li>
+            <li class="nav-item"><a href="contact.html">Contact</a></li>
         </ul>
+
     </nav>
+
     <main>
 
         <video src="video/solar.mp4"></video>
+        <section id="articles">
+            <article id="article-1">
+                <h3>Victron SmartSolar MPPT 100-50 12V 24V charge controller</h3>
+                <a target="_blank" href="http://www.ikwilzonneenergie.nl/Victron-SmartSolar-MPPT-100-50-12V-24V"><img
+                        src="img/SmartSolar-MPPT-10030.png" alt="Product 2" class="article-image"></a>
+                <p>
+                    A solar charger gathers energy from your solar panels, and stores it in your batteries.
+                    Using the latest, fastest technology, SmartSolar maximises this energy-harvest, driving it
+                    intelligently to achieve full charge in the shortest possible time.
+                    SmartSolar maintains battery health, extending its life.
+                    The SmartSolar charge controller will even recharge a severely depleted battery.
+                    It can operate with a battery voltage as low as 0 Volts, provided the cells are not
+                    permanently sulphated or otherwise damaged.
+                    <a target="_blank"
+                        href="https://www.victronenergy.com/solar-charge-controllers/smartsolar-100-30-100-50#pd-nav-image">Read
+                        more here</a>
+                </p>
+            </article>
 
-        <section id="home-flex">
+            <article id="article-2">
+                <h3>SMA SB3.6 Solar panels inverter 1 phase</h3>
+                <a target="_blank" href="http://www.ikwilzonneenergie.nl/SMA-Sunny-Boy-SB36-omvormer"><img
+                        src="img/sunny-boy-30-36-40-50-60.jpg" alt="Product 2" class="article-image"> </a>
+                <p>
+                    Established product features and integrated software solutions will provide yield
+                    optimization throughout the system’s entire service life.
+                    Even in shading. SMA ShadeFix is a proprietary inverter software that optimizes energy yield
+                    in nearly every situation.
+                    SMA Smart Connected inverter monitoring offers enhanced safety by detecting errors at an
+                    early stage and automatically reporting them to the installer.
+                    <a target="_blank"
+                        href="https://www.sma.de/en/products/solarinverters/sunny-boy-30-36-40-50-60.html">Read
+                        more here</a>
+                </p>
+            </article>
 
-            <section id="articles">
-                <article id="article-1">
-                    <h3>Victron SmartSolar MPPT 100-50 12V 24V charge controller</h3>
-                    <section class="article-content">
-                        <a target="_blank"
-                            href="http://www.ikwilzonneenergie.nl/Victron-SmartSolar-MPPT-100-50-12V-24V"><img
-                                src="img/SmartSolar-MPPT-10030.png" alt="Product 2" class="article-image"></a>
-                        <p>
-                            A solar charger gathers energy from your solar panels, and stores it in your batteries.
-                            Using the latest, fastest technology, SmartSolar maximises this energy-harvest, driving it
-                            intelligently to achieve full charge in the shortest possible time.
-                            SmartSolar maintains battery health, extending its life.
-                            The SmartSolar charge controller will even recharge a severely depleted battery.
-                            It can operate with a battery voltage as low as 0 Volts, provided the cells are not
-                            permanently sulphated or otherwise damaged.
-                            <a target="_blank"
-                                href="https://www.victronenergy.com/solar-charge-controllers/smartsolar-100-30-100-50#pd-nav-image">Read
-                                more here</a>
-                        </p>
-                    </section>
+            <article id="article-3">
+                <h3>Victron 175Wp 12Volt Solar panel set</h3>
 
-                </article>
+                <a target="_blank"
+                    href="https://www.ikwilzonneenergie.nl/epages/61494231.sf/nl_NL/?ObjectPath=/Shops/61494231/Products/%22175Wp+12Volt++zonne-energie+set%22"><img
+                        src="img/Victron-175Wp-12Volt-Solar-panel-set.png" alt="Product 3" class="article-image"></a>
 
-                <article id="article-2">
-                    <h3>SMA SB3.6 Solar panels inverter 1 phase</h3>
-                    <section class="article-content">
-                        <a target="_blank" href="http://www.ikwilzonneenergie.nl/SMA-Sunny-Boy-SB36-omvormer"><img
-                                src="img/sunny-boy-30-36-40-50-60.jpg" alt="Product 2" class="article-image"> </a>
-                        <p>
-                            Established product features and integrated software solutions will provide yield
-                            optimization throughout the system’s entire service life.
-                            Even in shading. SMA ShadeFix is a proprietary inverter software that optimizes energy yield
-                            in nearly every situation.
-                            SMA Smart Connected inverter monitoring offers enhanced safety by detecting errors at an
-                            early stage and automatically reporting them to the installer.
-                            <a target="_blank" href="https://www.sma.de/en/products/solarinverters/sunny-boy-30-36-40-50-60.html">Read
-                                more here</a>
-                        </p>
-                    </section>
-                </article>
-
-                <article id="article-3">
-                    <h3>Victron 175Wp 12Volt Solar panel set</h3>
-                    <section class="article-content">
-
-                        <a target="_blank"
-                            href="https://www.ikwilzonneenergie.nl/epages/61494231.sf/nl_NL/?ObjectPath=/Shops/61494231/Products/%22175Wp+12Volt++zonne-energie+set%22"><img
-                                src="img/Victron-175Wp-12Volt-Solar-panel-set.png" alt="Product 3"
-                                class="article-image"></a>
-
-                        <p>
-                            Solar charge controllers Steca Solarix 2525 and 4040 are newly developed products based on
-                            the internationally renowned controller family Steca PR.
-                            With increased module and load current, the controllers are now also suitable for even
-                            larger systems.
-                            The devices also feature an integrated USB charging port for charging smartphones and
-                            tablets.
-                            Use of the latest charging technologies combined with state of charge determination enable
-                            optimal battery maintenance and module power monitoring.
-                            A large display informs the user about all operating modes with the aid of symbols.
-                            The state of charge is represented visually as a level meter. Data such as voltage, current
-                            and state of charge can also be displayed digitally as figures on the display.
-                            In addition, the controller has an energy meter which can be reset by the user.
-                            <a target="_blank" href="https://www.steca.com/index.php?Steca-Solarix-en">Read more
-                                here</a>
-                        </p>
-                    </section>
-                </article>
-
-            </section>
-            <aside class="aside-home">
-                <h4>5 Reasons to Use Solar Power</h4>
-                <ol>
-                    <li><span class="aside-title">Solar Power Is Good for the Environment</span>
-                        Solar power is self-sufficient and installing solar panels on your roof is a safe and easy path
-                        to contribute
-                        to a sustainable future.
-                        Starting on your home is a great way to show you care about the environment.
-                    </li>
-
-                    <li><span class="aside-title">Solar Electricity Makes Your Home Go Off-the-Grid</span>
-                        Solar electricity boosts your electricity independence! By investing in a 4kW solar system,
-                        which is the most common domestic size, you can easily protect yourself against unpredictable
-                        increases in utility prices, and enjoy cheap electricity throughout the entire day - the sun
-                        will never increase its rates and it gives you energy security.
-                    </li>
-
-                    <li><span class="aside-title">Solar Power Can Use Underutilised Land</span>
-                        You might have heard of solar farms - panels used to harvest solar energy in large numbers. This
-                        highlights perfectly how solar power makes use of underutilised land. For instance, a 45 acre
-                        solar farm has been recently built in the UK, and it’s able to power 2,500 homes.
-                    </li>
-                    <li><span class="aside-title">Solar Power Causes Less Electricity Loss</span>
-                        Rooftop solar power is helpful in increasing electricity efficiency, considering the short
-                        distance. Your energy becomes domestic and as a result you’re in control of your own bills and
-                        energy usage. Furthermore, solar power systems are durable, thus chances of service interruption
-                        are reduced.
-                    </li>
-
-                    <li><span class="aside-title">Solar Power Is A Free Source of Energy</span>
-                        When there are many of us switching to solar power, we are less likely to experience blackouts
-                        or brownouts. Every household in the UK that have solar cells installed, functions as a small
-                        power plant. This, in turn, provides us with a greater electricity grid security, especially in
-                        terms of natural or human-caused disasters.
-                    </li>
-                </ol>
-            </aside>
+                <p>
+                    Solar charge controllers Steca Solarix 2525 and 4040 are newly developed products based on
+                    the internationally renowned controller family Steca PR.
+                    With increased module and load current, the controllers are now also suitable for even
+                    larger systems.
+                    The devices also feature an integrated USB charging port for charging smartphones and
+                    tablets.
+                    Use of the latest charging technologies combined with state of charge determination enable
+                    optimal battery maintenance and module power monitoring.
+                    A large display informs the user about all operating modes with the aid of symbols.
+                    The state of charge is represented visually as a level meter. Data such as voltage, current
+                    and state of charge can also be displayed digitally as figures on the display.
+                    In addition, the controller has an energy meter which can be reset by the user.
+                    <a target="_blank" href="https://www.steca.com/index.php?Steca-Solarix-en">Read more
+                        here</a>
+                </p>
+            </article>
         </section>
+
+        <aside id="aside-home">
+            <h4>5 Reasons to Use Solar Power</h4>
+            <ol>
+                <li>
+                    <h3>Solar Power Is Good for the Environment</h3>
+                    Solar power is self-sufficient and installing solar panels on your roof is a safe and easy path
+                    to contribute
+                    to a sustainable future.
+                    Starting on your home is a great way to show you care about the environment.
+                </li>
+
+                <li>
+                    <h3>Solar Electricity Makes Your Home Go Off-the-Grid</h3>
+                    Solar electricity boosts your electricity independence! By investing in a 4kW solar system,
+                    which is the most common domestic size, you can easily protect yourself against unpredictable
+                    increases in utility prices, and enjoy cheap electricity throughout the entire day - the sun
+                    will never increase its rates and it gives you energy security.
+                </li>
+
+                <li>
+                    <h3>Solar Power Can Use Underutilised Land</h3>
+                    You might have heard of solar farms - panels used to harvest solar energy in large numbers. This
+                    highlights perfectly how solar power makes use of underutilised land. For instance, a 45 acre
+                    solar farm has been recently built in the UK, and it’s able to power 2,500 homes.
+                </li>
+                <li>
+                    <h3>Solar Power Causes Less Electricity Loss</h3>
+                    Rooftop solar power is helpful in increasing electricity efficiency, considering the short
+                    distance. Your energy becomes domestic and as a result you’re in control of your own bills and
+                    energy usage. Furthermore, solar power systems are durable, thus chances of service interruption
+                    are reduced.
+                </li>
+
+                <li>
+                    <h3>Solar Power Is A Free Source of Energy</h3>
+                    When there are many of us switching to solar power, we are less likely to experience blackouts
+                    or brownouts. Every household in the UK that have solar cells installed, functions as a small
+                    power plant. This, in turn, provides us with a greater electricity grid security, especially in
+                    terms of natural or human-caused disasters.
+                </li>
+            </ol>
+        </aside>
     </main>
+
     <footer>
         <p>
             &copy; Stephen Holden 2020
         </p>
+        <section id="cookie-info">
+            <h2>Cookie Statement</h2>
+            <p>
+                This site uses Cookies to enhance your experience. By using this website you agree to our cookie policy
+            </p>
+        </section>
     </footer>
 </body>
 
