--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
-    <main>
+    <main id="contact-us">
 
         <form action="http://i-want-solar-energy.com/testform.php" method="GET">
             <fieldset>
@@ -38,23 +38,50 @@
                 <label for="email">Email:</label>
                 <input type="email" id="email" name="email">
                 <label for="message">Message:</label>
-                <input type="text" id="message" name="message">
+                <input type="textarea" id="message" name="message">
                 <input type="submit" value="Submit">
             </fieldset>
         </form>
 
 
-        <aside>
-            <img src="/img/product1.jpg" alt="">
-            <a href="https://www.ikwilzonneenergie.nl/">advertisement</a>
-            <img src="/img/product1.jpg" alt="">
-            <img src="/img/product1.jpg" alt="">
+        <aside id="contact-ad">
+
+            <figure id="ad-1">
+                <a
+                    href="https://www.ikwilzonneenergie.nl/epages/61494231.sf/nl_NL/?ObjectPath=/Shops/61494231/Products/SCC110050210">
+                    <img src="img/SmartSolar-MPPT-10030.png" alt="Image of SmartSolar MPPT 10030">
+
+                </a>
+                <figcaption>SmartSolar MPPT 10030</figcaption>
+            </figure>
+
+            <figure id="ad-2">
+                <a
+                    href="https://www.ikwilzonneenergie.nl/epages/61494231.sf/nl_NL/?ObjectPath=/Shops/61494231/Products/%22SMA+Sunny+Boy+SB3.6%22">
+                    <img src="img/sunny-boy-30-36-40-50-60.jpg" alt="Image of SMA SB3.6 Solar panels inverter 1 phase">
+                </a>
+                <figcaption>SMA SB3.6 Solar panels inverter 1 phase</figcaption>
+            </figure>
+
+            <figure id="ad-3">
+                <a
+                    href="https://www.ikwilzonneenergie.nl/epages/61494231.sf/nl_NL/?ObjectPath=/Shops/61494231/Products/%22175Wp+12Volt++zonne-energie+set%22">
+                    <img src="img/Victron-175Wp-12Volt-Solar-panel-set.png" alt="Victron 175W 12Volt Solar panel set">
+                </a>
+                <figcaption>Victron 175W 12Volt Solar panel set</figcaption>
+            </figure>
         </aside>
     </main>
     <footer>
         <p>
             &copy; Stephen Holden 2020
         </p>
+        <section id="cookie-info">
+            <h2>Cookie Statement</h2>
+            <p>
+                This site uses Cookies to enhance your experience. By using this website you agree to our cookie policy
+            </p>
+        </section>
     </footer>
 </body>
 
