--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - Solar Energy</title>
     <link rel="stylesheet" href="css/style.css">
+    <meta name="author" content="Stephen Holden">
 </head>
 
 <body>
@@ -21,8 +22,7 @@
 
     <nav>
         <ul>
-        
-            <li class="nav-item"><a href="index.html">Home</a></li>
+            <li class="nav-item"><a class="selected" href="index.html">Home</a></li>
             <li class="nav-item"><a href="howsolarworks.html">How solar works</a></li>
             <li class="nav-item"><a href="eusolar.html">EU Solar</a></li>
             <li class="nav-item"><a href="contact.html">Contact</a></li>
