--- a/howsolarworks.html
+++ b/howsolarworks.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-
+    <meta name="author" content="Stephen Holden">
     <title>How Solar Works</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -24,10 +23,10 @@
 
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="howsolarworks.html">How solar works</a></li>
-            <li><a href="eusolar.html">EU Solar</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li class="nav-item"><a href="index.html">Home</a></li>
+            <li class="nav-item"><a class="selected" href="howsolarworks.html">How solar works</a></li>
+            <li class="nav-item"><a href="eusolar.html">EU Solar</a></li>
+            <li class="nav-item"><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
     <main>
