--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Stephen Holden">
     <title>Contact</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Notable">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -39,8 +40,9 @@
                 <label for="email">Email:</label>
                 <input type="email" id="email" name="email">
                 <label for="message">Message:</label>
-                <input type="text" id="message" name="message">
+                <textarea name="message" id="message" cols="30" rows="10"></textarea>
                 <input type="submit" value="Submit">
+                
             </fieldset>
         </form>
 
