--- a/eusolar.html
+++ b/eusolar.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Stephen Holden">
     <title>Eu Solar</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Notable">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
