--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - Solar Energy</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Notable">
     <link rel="stylesheet" href="css/style.css">
     <meta name="author" content="Stephen Holden">
 </head>
