Enable video autoplay

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <main>
 
-        <video src="video/solar.mp4"></video>
+        <video src="video/solar.mp4" autoplay></video>
         <section id="articles">
             <article id="article-1">
                 <h3>Victron SmartSolar MPPT 100-50 12V 24V charge controller</h3>
